spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -233,9 +233,9 @@ form .submit:hover{
   }
   .contact{
     position: relative;
-    top: 55%;
+    /* top: 55%; */
     transform: translateY(-40%);
-    height: 300px;
+    height: 100px;
 
     background-color: rgb(245, 245, 220);
     border: 3px solid black;
